// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component with custom page options 1`] = `
<div
  className="sui-results-per-page"
  results={
    Array [
      Object {},
      Object {},
    ]
  }
  searchTerm="test"
>
  <div
    className="sui-results-per-page__label"
  >
    Show
  </div>
  <e
    caretIcon={<DownChevron />}
    key="result_page_select_[object Object]"
    name="select"
    onChange={[Function]}
    options={
      Array [
        Object {
          "text": 5,
          "value": 5,
        },
        Object {
          "text": 10,
          "value": 10,
        },
        Object {
          "text": 15,
          "value": 15,
        },
      ]
    }
    selectedValue={10}
  />
</div>
`;

exports[`renders when it doesn't have any results or a search term 1`] = `
<div
  className="sui-results-per-page"
  results={Array []}
  searchTerm=""
>
  <div
    className="sui-results-per-page__label"
  >
    Show
  </div>
  <e
    caretIcon={<DownChevron />}
    key="result_page_select_[object Object]"
    name="select"
    onChange={[Function]}
    options={
      Array [
        Object {
          "text": 20,
          "value": 20,
        },
        Object {
          "text": 40,
          "value": 40,
        },
        Object {
          "text": 60,
          "value": 60,
        },
      ]
    }
    selectedValue={20}
  />
</div>
`;

exports[`supports a render prop 1`] = `
<div>
  20
</div>
`;
